Fix Navbar scrollbar

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -3,3 +3,25 @@
   background-color: rgb(50, 50, 50);
   overflow-y: scroll;
 }
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #505050;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000000;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
